# LiteAuthor

./: .env.example  .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  package.json  start-gemini.sh  start-mlx.sh  start.sh
agent/: README.md  pyproject.toml
agent/liteauthor_agent/: __init__.py  config.py
agent/liteauthor_agent/agents/: __init__.py  continuity.py  literary_editor.py  scene_planner.py
agent/liteauthor_agent/context_engine/: __init__.py  builder.py
agent/liteauthor_agent/llm_gateway/: __init__.py  client.py  config.py  google_genai_client.py  mlx_client.py
agent/liteauthor_agent/orchestrator/: __init__.py  sample_job.py
agent/liteauthor_agent/prompt_templates/: __init__.py  agent_mode.py  zen.py
agent/liteauthor_agent/routers/: __init__.py
agent/liteauthor_agent/schemas/: __init__.py  context.py
agent/liteauthor_agent/services/: __init__.py
agent/liteauthor_agent/storage/: __init__.py
agent/liteauthor_agent/storycraft/: __init__.py  diagnostics.py  loader.py  models.py  prompts.py  selector.py
agent/liteauthor_agent/utils/: paths.py  tokens.py
agent/tests/: test_storycraft.py
backend/: .env.example  .gitignore  requirements.txt  start.sh
backend/app/: __init__.py  config.py  database.py  main.py  observability.py  schemas.py  wiki_flow.py
backend/builtin-skills/: action-linking.md  avoid-preachy.md  (+389 more)
docs/: skill-embedding-plan.md  story-canvas-spec.md
frontend/: index.html  metadata.json  package-lock.json  package.json  vite.config.ts
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
(+52 files in other folders)
