[project]
name = "liteauthor-agent"
version = "0.1.0"
description = "LiteAuthor LLM context, prompts, and orchestration (used by backend API)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["liteauthor_agent*"]
